test/fail/var-const-field.mo
let o : {var x : Nat} = {x = 0};
